--- a/app/src/main/res/layout/activity_redesign.xml
+++ b/app/src/main/res/layout/activity_redesign.xml
@@ -54,7 +54,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            app:cardCornerRadius="8dp"
+            app:cardCornerRadius="24dp"
             app:cardElevation="4dp">
 
             <RelativeLayout
@@ -97,7 +97,6 @@
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
-
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -109,8 +108,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/welcomeText2">
 
+        <!-- First Grid Cell -->
         <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
+            android:id="@+id/bookingAppointment"
+            android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_row="0"
             android:layout_column="0"
@@ -122,12 +123,10 @@
             android:background="@color/black"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
-
-
-            >
+            android:layout_columnSpan="1">
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:gravity="center"
                 android:layout_gravity="center_vertical|center_horizontal">
@@ -136,18 +135,20 @@
                     android:layout_height="wrap_content"
                     android:src="@drawable/baseline_home_24"
                     app:tint="@color/white" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="HOME"
-                android:textStyle="bold"
-                android:textColor="@color/white"
-                android:textAlignment="center"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Book Appointment"
+                    android:textStyle="bold"
+                    android:textColor="@color/white"
+                    android:textAlignment="center"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
+        <!-- Second Grid Cell -->
         <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
+            android:id="@+id/viewAppointment"
+            android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_row="0"
             android:layout_column="1"
@@ -159,12 +160,10 @@
             android:background="@color/black"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
-
-
-            >
+            android:layout_columnSpan="1">
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:gravity="center"
                 android:layout_gravity="center_vertical|center_horizontal">
@@ -176,14 +175,17 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="HOME"
+                    android:text="View Appointment"
                     android:textStyle="bold"
                     android:textColor="@color/white"
                     android:textAlignment="center"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
+        <!-- Third Grid Cell -->
         <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
+            android:id="@+id/logoutButton"
+            android:layout_width="0dp"
             android:layout_height="100dp"
             android:layout_row="0"
             android:layout_column="2"
@@ -195,12 +197,10 @@
             android:background="@color/black"
             app:cardCornerRadius="8dp"
             app:cardElevation="8dp"
-
-
-            >
+            android:layout_columnSpan="1">
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:gravity="center"
                 android:layout_gravity="center_vertical|center_horizontal">
@@ -212,123 +212,22 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="HOME"
+                    android:text="Log out"
                     android:textStyle="bold"
                     android:textColor="@color/white"
                     android:textAlignment="center"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:layout_row="1"
-            android:layout_column="0"
-            android:layout_gravity="fill"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_margin="8dp"
-            app:cardBackgroundColor="@color/teal_700"
-            android:background="@color/black"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="8dp"
 
 
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:layout_gravity="center_vertical|center_horizontal">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/baseline_home_24"
-                    app:tint="@color/white" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="HOME"
-                    android:textStyle="bold"
-                    android:textColor="@color/white"
-                    android:textAlignment="center"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:layout_row="1"
-            android:layout_column="1"
-            android:layout_gravity="fill"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_margin="8dp"
-            app:cardBackgroundColor="@color/teal_700"
-            android:background="@color/black"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="8dp"
 
 
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:layout_gravity="center_vertical|center_horizontal">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/baseline_home_24"
-                    app:tint="@color/white" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="HOME"
-                    android:textStyle="bold"
-                    android:textColor="@color/white"
-                    android:textAlignment="center"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:layout_row="1"
-            android:layout_column="2"
-            android:layout_gravity="fill"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_margin="8dp"
-            app:cardBackgroundColor="@color/teal_700"
-            android:background="@color/black"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="8dp"
 
+        <!-- Repeat for the rest of the grid cells -->
 
-            >
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:layout_gravity="center_vertical|center_horizontal">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/baseline_home_24"
-                    app:tint="@color/white" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="HOME"
-                    android:textStyle="bold"
-                    android:textColor="@color/white"
-                    android:textAlignment="center"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
     </GridLayout>
+
 
 
 
