--- a/app/src/main/res/layout/activity_userdetails.xml
+++ b/app/src/main/res/layout/activity_userdetails.xml
@@ -4,20 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignInActivity">
+    android:background="#FDFDFD"
+    tools:context=".userDetailsActivity">
+
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/firstNamelayout"
         style="@style/LoginTextInputOuterFieldStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
         app:boxStrokeColor="@color/black"
         app:hintTextColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/imageView2">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/firstNameEt"
@@ -41,7 +44,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/firstNamelayout"
-       >
+        >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/lastNameET"
@@ -101,7 +104,7 @@
             android:hint="Select your date of birth"
             android:focusable="false"
             android:clickable="true"
-        />
+            />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -144,26 +147,25 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
-        android:background="@color/yellow"
+        android:layout_marginTop="24dp"
+        android:background="@color/teal_700"
         android:text="Save Details"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-      />
+        app:layout_constraintTop_toBottomOf="@+id/GenderRadioGroup" />
 
-    <TextView
-        android:id="@+id/navigationSignUp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:text="@string/navigationSignUp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/resume" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
