Fix test on pdf and it work

--- a/app/src/main/res/layout/activity_redesign.xml
+++ b/app/src/main/res/layout/activity_redesign.xml
@@ -1,45 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FDFDFD"
-    tools:context=".RedesignActivity">
-
-
-
-    <LinearLayout
+    android:orientation="vertical"
+    android:padding="16dp"
+    >
+    <Button
+        android:id="@+id/openPdfButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="20dp"
-        android:background="@drawable/search_view_background"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:text="Open PDF"
+        android:onClick="openPdf"
+        android:layout_gravity="center"
+        android:gravity="center"/>
+    <Button
+        android:id="@+id/createPdfButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Create PDF"
+        android:onClick="createPdf"
+        android:layout_gravity="center"
+        android:gravity="center"/>
 
-        <EditText
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:hint="Search user name or IC"
-            android:imeOptions="actionSearch"
-            android:paddingStart="15dp"
-            android:paddingEnd="15dp"
-            android:textSize="16sp"
-            android:background="@android:color/transparent"
-            tools:ignore="TouchTargetSizeCheck"
-            />
-
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/baseline_search_24"
-            app:tint="@android:color/white" />
-    </LinearLayout>
-
-
-
-        <include layout="@layout/activity_footer" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
