change new design for doctor

--- a/app/src/main/res/layout/activity_doctordisableappointmentdate.xml
+++ b/app/src/main/res/layout/activity_doctordisableappointmentdate.xml
@@ -59,9 +59,9 @@
             android:layout_width="346dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
-            android:background="@color/yellow"
+            android:background="@drawable/green_rounded_button"
             android:text="Disable Days"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
