--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -174,7 +174,19 @@
         app:layout_constraintStart_toStartOf="@+id/GenderRadioGroup"
         app:layout_constraintTop_toBottomOf="@+id/GenderRadioGroup" />
 
+    <TextView
+        android:id="@+id/editDoctorInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="16dp"
+        android:text="Edit Doctor Information"
+        android:textColor="@color/teal_200"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
+
     <include
-        android:id="@+id/include3"
+        android:id="@+id/include"
         layout="@layout/activity_footer" />
 </androidx.constraintlayout.widget.ConstraintLayout>
